# mcp-scraper

./: LICENSE  README.md  main.py  pyproject.toml
src/mcp_scraper/: client.py  entrypoint.py  tools.py
