[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-scraper"
version = "0.1.0"
description = "CLI Utility for scraping the available resources from an MCP server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[project.scripts]
mcp-scraper = "mcp_scraper:entrypoint.app"

[tool.hatch.build.targets.sdist]
packages = ["src/mcp_scraper"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scraper"]

[tool.ruff]
lint.extend-select = ["I"]